--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+*/download/*
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
